--- a/AndorsTrail/res/layout/toolboxview.xml
+++ b/AndorsTrail/res/layout/toolboxview.xml
@@ -7,6 +7,11 @@
 	android:background="@drawable/ui_gradientshape"
 	>
 
+    <ImageButton
+		android:id="@+id/toolbox_twinsprite"
+		style="@style/toolboxButtonTile"
+		android:src="@drawable/ui_icon_twinsprite"
+		/>
 	<ImageButton
 		android:id="@+id/toolbox_save"
 		style="@style/toolboxButtonTile"
