--- a/AndorsTrail/res/layout/heroinfo_equipped.xml
+++ b/AndorsTrail/res/layout/heroinfo_equipped.xml
@@ -13,6 +13,7 @@
 		android:id="@+id/heroinfo_worn_center"
 		>
 		<ImageView
+		    android:id="@+id/heroinfo_worn_center_image"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_centerInParent="true"
